--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -79,7 +79,7 @@
 @import "city/binakuru/profile"
 @import "city/binakuru/items"
 @import "city/binakuru/comments"
-
+@import "city/binakuru/filter"
 
 
 
