--- a/app/views/layouts/_filter.html.erb
+++ b/app/views/layouts/_filter.html.erb
@@ -1,5 +1,32 @@
+<button type="button" id="button" class="buttonFilter" name="boton" value="Iniciar">filter</button>
+
+
+
 
 <div id="effect" class="newClass ">
-  <a href="#" id="button" class="">filter</a>
+  <div class="filter-element">
+    <input type="checkbox" name="check_01" id="checkHostels" checked />
+    <label for="checkHostels" id="checkHostels">hostels</label>
+
+    <input type="checkbox" name="check_02" id="checkShopping" checked />
+    <label for="checkShopping" id="checkShopping">shopping</label>
+
+    <input type="checkbox" name="check_03" id="checkArt" checked />
+    <label for="checkArt" id="checkArt">art & museums</label>
+
+
+
+    <input type="text" class="input-medium search-query" placeholder="Filter">
+
+
+    <input type="checkbox" name="check_04" id="checkRestaurants" checked  />
+    <label for="checkRestaurants" id="checkRestaurants">restaurants</label>
+
+    <input type="checkbox" name="check_04" id="checkHistorical" checked />
+    <label for="checkHistorical" id="checkHistorical">historical</label>
+
+    <input type="checkbox" name="check_05" id="checkCuriosity" checked  />
+    <label for="checkCuriosity" id="checkCuriosity">curiosity</label>
+  </div>
 </div>
 
