--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -44,8 +44,8 @@
   margin-left: 0px
   display: inline-block
   float: left
+  position: relative
   .checkbox-menu
-    float: right
     margin-bottom: -5px
     label
       display: inline-block
