--- a/app/views/trips/_interest_points.html.erb
+++ b/app/views/trips/_interest_points.html.erb
@@ -2,17 +2,16 @@
 
 
 <div class="checkbox-menu">
-  <label for="check_01">
-  <input id="check_01" type="checkbox" name="check_01" />
 
-  <label for="check">guides</label>
-  <input type="checkbox" name="check" id="checkGuides" checked onchange="javascript:showContentGuides()" />
-  
-  <label for="check">routes</label>
-  <input type="checkbox" name="check" id="checkRoutes" checked onchange="javascript:showContentRoutes()" />
-  
-  <label for="check">places</label>
-  <input type="checkbox" name="check" id="checkPlaces" checked onchange="javascript:showContentPlaces()" />
+  <input type="checkbox" name="check_01" id="checkGuides" checked onchange="javascript:showContentGuides()" />
+  <label for="checkGuides">guides</label>
+
+  <input type="checkbox" name="check_02" id="checkRoutes" checked onchange="javascript:showContentRoutes()"/>
+  <label for="checkRoutes">routes</label>
+
+  <input type="checkbox" name="check_03" id="checkPlaces" checked onchange="javascript:showContentPlaces()" />
+  <label for="checkPlaces">places</label>
+
 </div>
 
 <div class="filter">
