--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -46,7 +46,9 @@
   float: left
   position: relative
   .checkbox-menu
-    margin-bottom: -5px
+    margin-bottom: -20px
+    float: right
+    margin-right: 60px
     label
       display: inline-block
     input[type=checkbox]
