--- a/app/views/plannings/_item.html.erb
+++ b/app/views/plannings/_item.html.erb
@@ -1,4 +1,4 @@
-<li class="">
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
 	<%= image_tag('panoramica_toledo.jpg') %>
 </li>
 <li class="">
