--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -6,7 +6,7 @@
 	<div id="planning_trip">
 		<h4><%= link_to t('planning.planning') %></h4>
 		<ul class="thumbnails">
-			<%= render :partial => "plannings/item" %>
+			<%= render :partial => "plannings/item_small" %>
 		</ul>
 	</div>
 
