more changes toolbar

--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -22,3 +22,7 @@ body
     display: block
     margin-left: auto
     margin-right: auto
+.imageProfile
+  background-image: url(toledo2.jpg) 
+  background-position: center
+  background-size: cover
