--- a/app/views/toolbar/_profile.html.erb
+++ b/app/views/toolbar/_profile.html.erb
@@ -5,8 +5,8 @@
         <div class="toolbar_front roundedBox">
           <a href=""></a>
         </div>
-        <div class="toolbar_back roundedBox">
-          <img src="/assets/profile.png" alt="">
+        <div class="toolbar_back roundedBox imageProfile">
+        <!--   <img src="/assets/profile.png" alt=""> -->
         </div>
   <!--       <div class="user">
           <%#= render partial: 'toolbar/logo',
