--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -20,6 +20,10 @@
           @include border-top-right-radius(50px)
           @include border-bottom-right-radius(0px)
           @include border-bottom-left-radius(50px)
+        .imageProfile
+          background-image: url(profile.png) 
+          background-position: center
+          background-size: cover
         .toolbar_front
           background-color: $color1
           opacity: 0.7
@@ -49,7 +53,7 @@
         .toolbar_back
           z-index: 0
           position: absolute
-          width: 147px
+          width: 100%
           height: 102px
           img
             @include border-top-left-radius(50px)
@@ -58,6 +62,7 @@
             @include border-bottom-left-radius(50px)
             width: 102px
             height: 100%
+
         .toolbar_contacts
           height: 43px
           margin-bottom: 15px
