--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -1,7 +1,9 @@
-#toolbar_profile
+#toolbar
   background-color: $white
-  width: 100%
+  @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
   height: 102px
+  .toolbar_profile
+
   .toolbar_content
     ul
       margin: 0
