--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,25 +1,28 @@
-<%# content_for :title do %>
-  <%#= "#{ @user.name } | #{ t 'site.name' }" %>
-<%# end %>
+<% content_for :title do %>
+  <%= "#{ @user.name } | #{ t 'site.name' }" %>
+<% end %>
 
-<%# content_for :description do %>
-  <%# if @user.profile.description? %>
-    <%#= @user.profile.description%>
-  <%# else %>
-    <%#= "#{ @user.name } #{ t('profile.is_on') } #{  t('site.name') }" %>
-  <%# end %>
-<%# end %>
+<% content_for :description do %>
+  <% if @user.profile.description? %>
+    <%= @user.profile.description%>
+  <% else %>
+    <%= "#{ @user.name } #{ t('profile.is_on') } #{  t('site.name') }" %>
+  <% end %>
+<% end %>
 
-<%# content_for :keywords do %>
-  <%#= @user.profile.subject.tag_list%>
-<%# end %>
+<% content_for :keywords do %>
+  <%= @user.profile.subject.tag_list%>
+<% end %>
 
-<%# sidebar %>
 
-<%#= location(link_to(t('profile.one')+": "+truncate_name(sanitize @user.name)))%>
+
+<%= location(link_to(t('profile.one')+": "+truncate_name(sanitize @user.name)))%>
               
   <%= render partial: 'toolbar/profile', locals: { subject: @user } %>
-  <%# toolbar :profile, :subject => @user %>
+
+
+
+
 
 
 
