--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,185 +1,9 @@
-<% content_for :title do %>
-  <%= "#{ @user.name } | #{ t 'site.name' }" %>
-<% end %>
-
-<% content_for :description do %>
-  <% if @user.profile.description? %>
-    <%= @user.profile.description%>
-  <% else %>
-    <%= "#{ @user.name } #{ t('profile.is_on') } #{  t('site.name') }" %>
-  <% end %>
-<% end %>
-
-<% content_for :keywords do %>
-  <%= @user.profile.subject.tag_list%>
-<% end %>
-
-
-
-<%= location(link_to(t('profile.one')+": "+truncate_name(sanitize @user.name)))%>
-              
+<section id="user">
   <%= render partial: 'toolbar/profile', locals: { subject: @user } %>
 
+  <%= render :partial => "activities/index",
+             :locals => { section: @user,
+                           owner: @user } %>
 
-
-
-
-
-
-<div id="content_profile" class="grid-3_center">
-  <div class="trip_content">
-    <p class="section">diaries / guides</p>
-    <ul class="trips">
-      <li class="plannings imageProfile">
-        <div class="planning_item">
-<!--           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica"> -->
-          <div class="caption_img">
-          </div>
-        </div>
-      </li>
-
-      <li class="diaries imageProfile" >
-        <a href="/diaries/1">
-          <div class="diary_item">
-           <!--  <img src="/assets/san_juan.jpg" alt="Toledo_basica"> -->
-            <div class="caption_img">
-            </div>
-          </div>
-        </a>
-      </li> 
-      <div class="city"><p>Toledo 2013</p></div>
-      <div class="divider">
-    </ul>
-    <ul class="trips">
-      <li class="plannings imageProfile">
-        <div class="planning_item">
-<!--           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica"> -->
-          <div class="caption_img">
-          </div>
-        </div>
-      </li>
-
-      <li class="diaries imageProfile" >
-        <a href="/diaries/1">
-          <div class="diary_item">
-<!--             <img src="/assets/san_juan.jpg" alt="Toledo_basica"> -->
-            <div class="caption_img">
-            </div>
-          </div>
-        </a>
-      </li> 
-      <div class="city"><p>Toledo 2013</p></div>
-      <div class="divider"></div>
-    </ul>
-    <ul class="trips">
-      <li class="plannings imageProfile">
-        <div class="planning_item">
-<!--           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
- -->          <div class="caption_img">
-          </div>
-        </div>
-      </li>
-
-      <li class="diaries" >
-        <a href="/diaries/1">
-          <div class="diary_item">
-<!--             <img src="/assets/san_juan.jpg" alt="Toledo_basica"> -->
-            <div class="caption_img">
-            </div>
-          </div>
-        </a>
-      </li> 
-      <div class="city"><p>Toledo 2013</p></div>
-      <div class="divider">
-    </ul>
-  </div>
-</div>
-
-  <!--div class="guide_home">
-    my guides
-    <img src="/assets/prueba.png" width="115" height="100" style="background-image:url(/assets/toledo2.jpg);" alt="texto" />
-    <ul class="thumbnails">
-        <%#= render :partial => "guides/item" %>
-    </ul>
-  </div>
-    <div class="my_diaries">
-      my diaries
-      <ul class="thumbnails">
-    <%#= render :partial => "diaries/item" %>
-  </ul>
-  </div>
-  </div-->
-
-
-
-
-
-<!-- 
- <div class="social grid-3_right">
-  <div class="hidden-phone">
-    <%#= render :partial => "users/groups",
-       :locals  => { :user => @user } %>
-  </div>
-
-
-
-  <div class="time-time">
-  <%#= render :partial => "activities/index",
-       :locals  => { :activities => @user.wall(:profile, :for => current_subject).page(params[:page]),
-                     :owner => @user } %>
-  <%#= render :partial => "activities/index",
-             :locals  => { section: @user,
-                           owner:   @user } %>
-
-  <%#= javascript_tag do %>
-    $(function(){  
-      SocialStream.Timeline.init();  
-    });
-  <%# end %>
-  </div>
-</div> -->
-
-<%#= render :partial => 'show' %>
-<div id=" profile_toolbar">
-  <ul class="toolbar">
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-</div>
-<div id="wall">
-  <p class="section">wall</p>
-  <div class="add_wall">
-    <div class="add_icon"><p>+</p></div>
-  </div>
-  <div class="wall_content">
-    <ul>
-      <li class="publication_space">
-        <p>Show something...</p>
-      </li>
-      <li>
-        <div class="wall_gallery">
-          <ul>
-            <li class="wall_image"></li>
-            <li class="wall_image"></li>
-          </ul>
-        </div>
-        <div class="options_publication">
-          <ul>
-            <li><a href="">comment</a></li>
-            <li><a href="">like</a></li>
-            <li><a href="">share</a></li>
-          </ul>
-        </div>
-        <div class="wall_date">
-          <div class="dates">
-            <div class="publication_date"> <p>23Feb</p></div>
-          </div>
-          <div class="divider"></div>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
+  <%= render partial: 'users/diaries-guides' %>
+</section>
