--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -37,6 +37,20 @@
     width: 100%
     height: 550px
     background: url("mapa-mundo.jpg")
+    .inspire_Z
+      z-index: 2
+      @include border-top-left-radius(40px)
+      @include border-top-right-radius(40px)
+      @include border-bottom-right-radius(40px)
+      @include border-bottom-left-radius(40px)
+      background-color: $color1
+      width: 9%
+      height: 15%
+      float: right
+      margin-top: 5%
+      margin-right: 5%
+
+
     .search-inspire
       position: absolute
       height: 100px
