--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -11,6 +11,11 @@
 
   </div> 
   <div class="front-map">
+    <div class="inspire_Z">
+      
+      inspire
+
+    </div>
     <div class="search-inspire">
 
       <p class="front-text">where do you whatn to go?</p>
@@ -19,6 +24,7 @@
     
 
     </div>
+
 
   </div>
  
