--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -6,7 +6,7 @@
       <li><a href="#">never get lost</a></li>
       <li><a href="#">Get your journal automatically</a></li>
       
-    
+
     </ul>
 
   </div> 
@@ -16,12 +16,51 @@
       <p class="front-text">where do you whatn to go?</p>
       1
       <input id="q" class="search-query" type="text" placeholder="Buscar" name="q" autocomplete="off">
-    
+
 
     </div>
 
   </div>
- 
+
+  <button class="btn">view on the map</button>
+  <div class="checkbox-menu">
+
+    <input type="checkbox" name="check_01" id="checkGuides" checked onchange="javascript:showContentGuides()" />
+    <label for="checkGuides">guides</label>
+
+    <input type="checkbox" name="check_02" id="checkRoutes" checked onchange="javascript:showContentRoutes()"/>
+    <label for="checkRoutes">routes</label>
+
+    <input type="checkbox" name="check_03" id="checkPlaces" checked onchange="javascript:showContentPlaces()" />
+    <label for="checkPlaces">places</label>
+
+  </div>
+
+  <div class="filter">
+    <%= render :partial => 'layouts/filter' %>
+  </div>
+
+
+  <div class="content-checkbox">
+    <div id="item-guides">
+      <% Guide.all.each do |guide| %>
+      <%= render :partial => 'guides/item', :locals => { :guide => guide } %>
+      <% end %>
+    </div>
+
+    <div id="item-routes">
+      <% Route.all.each do |route| %>
+      <%= render :partial => "routes/item", :locals => { :route => route } %>
+      <% end %>
+    </div>
+
+    <div id="item-places">
+      <% Place.all.each do |place| %>
+      <%= render :partial => "places/item", :locals => { :place => place } %>
+      <% end %>
+    </div>
+  </div>
+
 </section>
 
 
