--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -44,11 +44,21 @@
       @include border-bottom-right-radius(40px)
       @include border-bottom-left-radius(40px)
       background-color: $color1
-      width: 9%
+      width: 8.5%
       height: 15%
       float: right
       margin-top: 5%
       margin-right: 5%
+
+      .inspire_front
+        font-family: $LatoLight
+        font-size: 20px
+        color: white
+        text-align: center
+        input
+        @include center-block
+        margin-top: 30px
+      
 
 
     .search-inspire
@@ -66,4 +76,4 @@
         text-align: center 
       input
         @include center-block
-
+        
