--- a/app/assets/stylesheets/city/binakuru/headers.css.sass
+++ b/app/assets/stylesheets/city/binakuru/headers.css.sass
@@ -9,7 +9,6 @@
 				@include makeColumn(2, 0)
 				margin-left: 0px
 				padding: 13px 6px 0px 0px
-				
 			.logo
 				margin-top: 5px
 				display: inline-block
@@ -18,10 +17,6 @@
 					width: 75px
 					margin-right: 20px
 			.user-nav
-				
-				
-				
-				
 				height: 30px
 				margin-top: 6px
 				margin-bottom: 3px
@@ -32,8 +27,7 @@
 						@include border-bottom-right-radius(0px)
 						@include border-bottom-left-radius(15px)
 						width: 30px
-						height: 30px
-						
+						height: 30px	
 				a
 					padding: 0px
 				.name
@@ -55,12 +49,10 @@
 					display: inline-block
 					.search-query
 						border: 0px solid #ffffff
-					
 				.dropdown
 					display: inline-block
 					vertical-align: top
 					margin-top: 11px
-					
 					color: #000
 					.dropdown-toggle
 						a
@@ -70,17 +62,24 @@
 							border-left: 8px solid transparent
 							border-right: 8px solid transparent
 							border-top: 8px solid $color1
-
 						ul.dropdown-menu
-
 							li
 
+.nav-header
+	
 
-
-
-
-				
-
-
-
-
+	.popover
+		text-align: center
+		width: 300px
+		height: 400px
+		margin-left: 240px
+		.popover-inner
+		border-radius: 0px
+		border-color: $color1
+		border-line: 10px
+		margin-left: 250px
+		.popover-title
+			display: none
+		.popover-content
+			.remember
+				text-align: left
