--- a/app/views/frontpage/_pois_frontpage.html.erb
+++ b/app/views/frontpage/_pois_frontpage.html.erb
@@ -1,4 +1,4 @@
-
+<div id="interest_points">
   <button class="btn">view on the map</button>
   <div class="checkbox-menu">
 
@@ -19,24 +19,23 @@
 
 
   <div class="content-checkbox">
+    
     <div id="item-guides">
-      <% @trip.guides.each do |guide| %>
-        <%= render :partial => 'guides/item', :locals => { :guide => guide } %>
+      <% Guide.all.each do |guide| %>
+      <%= render :partial => 'guides/item', :locals => { :guide => guide } %>
       <% end %>
     </div>
 
     <div id="item-routes">
-      <% @trip.routes.each do |route| %>
-        <%= render :partial => "routes/item", :locals => { :route => route } %>
+      <% Route.all.each do |route| %>
+      <%= render :partial => "routes/item", :locals => { :route => route } %>
       <% end %>
     </div>
 
     <div id="item-places">
-      <% @trip.places.each do |place| %>
-        <%= render :partial => "places/item", :locals => { :place => place } %>
+      <% Place.all.each do |place| %>
+      <%= render :partial => "places/item", :locals => { :place => place } %>
       <% end %>
     </div>
   </div>
-
-
-
+</div>
