--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -18,7 +18,7 @@
 //@import "city/base/toolbar"
 //@import "city/base/content"
 //@import "city/base/content_home"
-@import "city/base/wrapper_activities"
+//@import "city/base/wrapper_activities"
 //@import "city/base/timeline"
 //@import "city/base/wall"
 //@import "city/base/sidebar"
@@ -43,7 +43,7 @@
 //documents
 @import "city/documents/info"
 @import "city/documents/grid"
-@import "city/documents/wallinput"
+//@import "city/documents/wallinput"
 @import "city/documents/audios"
 
 //places
