--- a/app/assets/stylesheets/city/binakuru/timeline.css.sass
+++ b/app/assets/stylesheets/city/binakuru/timeline.css.sass
@@ -1,61 +1,98 @@
 .activities
-  @include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
-  background-color: $white
-  margin-top: 50px
-  header
-    h2
-      display: none
-      font-size: 14px
-      text-align: center
-      color: $color1
-  .wall_input
-    clear: both
-    form.new_post
-      position: relative
-      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      textarea
-        position: absolute
-        @include grid-fluid-span(11, $fluidGridColumnWidth, $fluidGridGutterWidth)
-        @include border-radius (0)
-        left: 0
-        padding: 4px 20px 4px 6px
-      .document_description
-        position: relative
-        margin-top: 42px
-        @include border-radius (0)
-      .wall_input-actions
-        position: absolute
-        @include grid-fluid-span(1, $fluidGridColumnWidth, $fluidGridGutterWidth)
-        right: 0
-        input.btn
-          position: absolute
-          right: 0px
-          height: 60px
-          width: 60px
-          @include border-radius(30px)
-          background-color: $color1
-          color: $white
-          background-image: none
-          margin-top: -10px
-          font-size: 12px
-        .new_document
+	@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	background-color: $white
+	margin-top: 50px
+	header
+		h2
+			display: none
+			font-size: 14px
+			text-align: center
+			color: $color1
+	.wall_input
+		clear: both
+		form.new_post
+			position: relative
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			textarea
+				position: absolute
+				@include grid-fluid-span(11, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				@include border-top-left-radius(0px)
+				@include border-top-right-radius(17px)
+				@include border-bottom-right-radius(17px)
+				@include border-bottom-left-radius(0px)
+				height: 30px
+				left: 0
+				padding: 4px 46px 4px 6px
+				resize: none
+			.document_description
+				position: relative
+				margin-top: 42px
+				@include border-radius (0)
+			.wall_input-actions
+				position: absolute
+				@include grid-fluid-span(1, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				right: 0
+				input.btn
+					position: absolute
+					right: 0px
+					height: 40px
+					width: 40px
+					@include border-radius(20px)
+					background-color: $color1
+					color: $white
+					background-image: none
+					font-size: 12px
+				.new_document
+					@include border-radius(15px)
+					background-color: $grayLight
+					background-image: url("ico/add+.png")
+					width: 30px
+					height: 30px
+					background-repeat: no-repeat
+					background-position: 50%
+					position: absolute
+					right: -10px
+					top: -15px
+					img
+						display: none
+				button.multiselect
+					display: none
+	.timeline
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		display: inline-block
+		position: relative
+		margin-top: 45px
+		.media
+			border-bottom: 1px dashed $gray
+			.avatar
 
-          @include border-radius(15px)
-          background-color: $grayLight
-          background-image: url("ico/add+.png")
-          width: 30px
-          height: 30px
-          background-repeat: no-repeat
-          background-position: 50%
-          position: absolute
-          right: -10px
-          top: -15px
-          img
-            display: none
-  .timeline
-    @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    display: inline-block
-    position: relative
-    margin-top: 45px
+				.media-object
+					img
+						height: 50px
+						width: 50px
+						@include border-top-left-radius(25px)
+						@include border-top-right-radius(25px)
+						@include border-bottom-right-radius(0px)
+						@include border-bottom-left-radius(25px)
+			header.media-heading
+				a
+					font-family: $LatoLight
+					font-size: 25px
+				.x
+					display: block
+					margin-right: 5px
+			.media-body
+				.objects
+					.picture
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						margin-top: 20px
+						img
+							display: block
+							float: left
+							@include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
 
-      
+
+
+						.thumb
+
+						.text
