--- a/app/assets/stylesheets/city/binakuru/comments.css.sass
+++ b/app/assets/stylesheets/city/binakuru/comments.css.sass
@@ -77,6 +77,8 @@
             display: none
           .audience-tooltip
             display: none
+          .to_share
+            display: none
 
 
 
