--- a/app/assets/stylesheets/city/binakuru/mixins.css.sass
+++ b/app/assets/stylesheets/city/binakuru/mixins.css.sass
@@ -146,6 +146,16 @@
   color: $white
 
 
+//TIMELINE
+
+@mixin objectsTitle
+  font-family: $LatoLightItalic
+  font-size: 18px
+  color: $color1
+@mixin objectsDescription
+  font-family: $OpenSans
+  font-size: 12px
+  color: $grayLight
 
 
 
