--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -8,7 +8,8 @@ body
     width: 969px
     background-image: url('guia-01.png')
     background-repeat: repeat-y
-    text-decoration: none
+    a
+      text-decoration: none
   .divider
     background-color: lightgrey
     height: 1px
