--- a/app/views/guides/_info.html.erb
+++ b/app/views/guides/_info.html.erb
@@ -13,7 +13,7 @@
 <div class="coment-social">
   <div id="comments" class="comments">
     <h2>comments</h2>
-    <div class="new-coments-box">
+    <div class="new-comments-box">
       <%= render :partial => 'comments/new', :locals => { :activity => @guide.post_activity } %>
     </div>
     <%= render :partial => 'activities/comments', :locals => { :activity => @guide.post_activity } %>
