--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
 
 	<h2><%= link_to t('comments') %></h2>
   <div id="comments" class="comments">
-  	<div class="new-coments-box">
+  	<div class="new-comments-box">
     	<%= render :partial => 'comments/new', :locals => { :activity => Trip.first.post_activity } %>
   	</div>
     <%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
