--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -22,7 +22,7 @@
     <div class="coment-social">
       <div id="comments" class="comments">
         <h2>comments</h2>
-        <div class="new-coments-box">
+        <div class="new-comments-box">
           <%= render :partial => 'comments/new', :locals => { :activity => @place.post_activity } %>
         </div>
         <%= render :partial => 'activities/comments', :locals => { :activity => @place.post_activity } %>
