Plannings almost done

--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -4,6 +4,7 @@
   display: inline-block
 
 body
+  background-color: $bodyBackground
   .wrapper
     width: 969px
     background-image: url('guia-01.png')
