--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -2,8 +2,8 @@
   background-color: $white
   @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
   height: 102px
-  .toolbar_profile
-
+  
+#toolbar_profile
   .toolbar_content
     ul
       margin: 0
@@ -64,7 +64,10 @@
             @include border-bottom-left-radius(50px)
             width: 102px
             height: 100%
-
+        .toolbar_diaries
+          background-image: url(toledo_rio2.jpg) 
+          background-position: center
+          background-size: cover
         .toolbar_contacts
           height: 43px
           margin-bottom: 15px
