--- a/app/views/toolbar/_plannings.html.erb
+++ b/app/views/toolbar/_plannings.html.erb
@@ -2,10 +2,10 @@
   <div class="toolbar_content">
     <ul>
       <li class="diaries">
-        <div class="toolbar_front">
-          <a href="">Vacation 2012 Madrid</a>
+        <div class="toolbar_front ">
+          <a href="">Toledo Oct13</a>
         </div>
-        <div class="toolbar_back">
+        <div class="toolbar_back toolbar_diaries">
         </div>
   <!--       <div class="user">
           <%#= render partial: 'toolbar/logo',
@@ -26,7 +26,7 @@
       </li>
       <li class="diaries">    
         <div class="toolbar_front">
-          <a href="">name</a>
+          <a href="">empty</a>
         </div>
         <div class="toolbar_back">
         </div>
@@ -36,7 +36,7 @@
       </li>
       <li class="diaries">
         <div class="toolbar_front">
-          <a href="">profile</a>
+          <a href="">empty</a>
         </div>
         <div class="toolbar_back">
         </div>
@@ -46,7 +46,7 @@
       <%# if current_subject.present? && subject != current_subject %>
         <li class="diaries">
           <div class="toolbar_front">
-            <a href="">profile</a>
+            <a href="">empty</a>
           </div>
           <div class="toolbar_back">
           </div>
@@ -57,7 +57,7 @@
       <%# end %>
       <li class="diaries">
         <div class="toolbar_front">
-          <a href="">profile</a>
+          <a href="">empty</a>
         </div>
         <div class="toolbar_back">
         </div>
@@ -69,7 +69,7 @@
       <%# if SocialStream.repository_models.present? %>
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">messages</a>
+              <a href="">empty</a>
             </div>
             <div class="toolbar_back"></div>
           <%#= link_to [ subject, :repository ], class: "btn-blue"  do %>
@@ -80,13 +80,13 @@
 
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">messages</a>
+              <a href="">empty</a>
             </div>
             <div class="toolbar_back"></div>
         </li>
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">messages</a>
+              <a href="">mempty</a>
             </div>
             <div class="toolbar_back"></div>
         </li>       
