prg layout almost done

--- a/app/views/places/_place_info.html.erb
+++ b/app/views/places/_place_info.html.erb
@@ -1,7 +1,8 @@
 <div class="info">
 	<div><%= @place.formatted %></div>
 	<div>
-		<%= @place.phone_number %> ·  
+		<%= @place.phone_number %></div>
+    <div>  
 		<%= link_to @place.url, @place.url, :target => "_blank" %>
 	</div>
 </div>
