--- a/app/assets/stylesheets/city/binakuru/mixins.css.sass
+++ b/app/assets/stylesheets/city/binakuru/mixins.css.sass
@@ -13,7 +13,7 @@
 @mixin normalText
   font-family: $OpenSans
   font-size: 12px
-  color: $color2
+  color: grey
 @mixin user
   font-family: $LatoLight
   font-size: 12px
