--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -1,127 +1,139 @@
 .toggler
   margin-top: 200px
 .place_show
-  @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+  width: 100%
   display: inline-block
-  float: left
-  width: 75%
-  position: relative
-  h2
-  .info_photo
-    @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    display: inline-block
-    z-index: 1
+  height: 405px
+  background-color: white
+  .place_left
+    float: left
+    width: 71% 
     height: 335px
-    position: absolute
-    img
-      height: auto
-  .map 
-    z-index: 0
-    position: absolute
-
-  .place_description
-    @include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    display: inline-block
-    float: right
-    margin-top: 20px
-    float: right
-    width: 25%
-    .title_place
-      background-color: #0DA592
-      border-radius: 94px 94px 94px 94px
-      color: white
-      font-family: "LatoLightItalic"
-      font-size: 50px
-      height: 188px
-      margin-left: 625px
-      margin-top: 20px
-      position: absolute
-      text-align: center
-      width: 188px
-  .coment-social
-    @include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    display: inline-block
-    float: left
-
-@media (max-width: 767px)
-  .place_show
-    @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-    display: inline-block
-    float: left
-    h2
+    position: relative
     .info_photo
-      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      display: inline-block
+      display: block
       z-index: 1
-      height: 335px
-      overflow: auto
-      width: 75%
-      img
-        height: auto
+      position: absolute
+      width: 100%
     .map 
       z-index: 0
+      position: absolute
+      width: 100%
 
-    .place_description
-      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      display: inline-block
+  .PRG_information
+    width: 29%
+    display: block
+    float: right
+    background-color: white
+    .btn-add
+      margin: 10px
       float: right
+    .prg_stars
+      margin-top: 25px 
+      margin-left: auto
+      margin-right: auto
+      width: 116px
+      ul 
+        margin: 0
+        li 
+          inline-block
+          display: inline-block
+          .star:after
+            border-bottom: 7px solid $color2
+            border-left: 10px solid transparent
+            border-right: 10px solid transparent
+            color: $color2
+            content: ""
+            display: block
+            height: 0
+            left: -10px
+            position: absolute
+            top: 1px
+            transform: rotate(-70deg)
+            width: 0
+          .star:before 
+            border-bottom: 8px solid $color2
+            border-left: 3px solid transparent
+            border-right: 3px solid transparent
+            content: ""
+            display: block
+            height: 0
+            left: -6.5px
+            position: absolute
+            top: -4.5px
+            transform: rotate(-35deg)
+            width: 0
+          .star
+            border-bottom: 8px solid $color2
+            border-left: 10px solid transparent
+            border-right: 10px solid transparent
+            color: #FC2E5A
+            display: block
+            height: 0
+            margin: 5px 0
+            position: relative
+            transform: rotate(35deg)
+            width: 0
+    .info 
+      text-align: left
+      padding-top: 40px
+      padding-right: 10px
+      padding-left: 32px
+      padding-bottom: 10px
+
+    .title_prg
+      background-color: #0DA592
+      border-radius: 100px 100px 100px 100px
+      height: 200px
+      margin-left: auto
+      margin-right: auto
       margin-top: 20px
-      float: right
-      width: 25%
-      .title_place
-        background-color: #0DA592
-        border-radius: 94px 94px 94px 94px
-        color: white
-        font-family: "LatoLightItalic"
-        font-size: 50px
-        height: 188px
-        margin-left: 625px
-        margin-top: 20px
-        position: absolute
-        text-align: center
-        width: 188px
-
-    .coment-social
-      @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      display: inline-block
-      float: left
-
-
-
-.info_left
-  width: 60%
-#info_place
-  @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-  height: 360px
-  .Carousel-place
-    .item
-      img
-        @include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
-        max-height: 360px
-        float: left
-      iframe 
-        width: 720px
-        height: 360px      
-    .carousel-caption
-      @include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      float: left
-      background-color: $white
-      position: static
-      height: 100%
-      height: 330px
-      h2
-        color: #9A9A9A
-        opacity: 0.8
-        margin-top: 220px
-      p.lead
-        color: $gray
-        font-size: 16px
-        display: inline-block
-#comments-element
-  width: 31.88%
+      text-align: center
+      line-height: 50px
+      width: 200px
+      p
+        padding-top: 50px
+        @include cityName
+.PRG_description
+  width: 68%
+  background-color: white
+  margin-bottom: 24px
+  padding-bottom: 10px
+  margin-top: 25px
+  h2
+    @include title
+    margin-top: 20px
+    padding-left: 10px
+  p    
+    @include normalText
+    padding-right: 40px
+    padding-left: 20px
+    .btn-
+.coment-social
+  width: 68%  
   display: inline-block
-  float: left
-  h4
+  background-color: white
+  .comments
+    width: 200px
+    display: inline
+    h2
+      @include section
+    textarea
+      height: 20px  
+.related
+  width: 29%
+  float: right
+  margin-top: -9px
+  p 
+    @include section
     text-align: center
-    margin-top: 4px
-    margin-bottom: 4px
+    padding-top: 5px
+  .related_all
+    background-color: white
+    height: 300px
+    width: 100%
+.change_mode
+  width: 71%
+  text-align: center
+  a 
+    @include mapMode
