prg layout almost done 2

--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -130,8 +130,19 @@
     padding-top: 5px
   .related_all
     background-color: white
-    height: 300px
+    height: auto
     width: 100%
+  .related_photos
+    padding-top: 10px
+    padding-bottom: 10px
+    ul 
+      li 
+        display: inline-block
+        img
+          max-width: 100px
+          height: auto
+          opacity: 0.8
+
 .change_mode
   width: 71%
   text-align: center
