--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -44,7 +44,18 @@
       <p>related events</p>
       <div class="related_events related_all"></div>
       <p>related photos</p>
-      <div class="related_img related_all"></div>
+      <div class="related_photos related_all">
+        <ul>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+        </ul>
+        <ul>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+        </ul>
+      </div>
       <p>related videos</p>
       <div class="related_videos related_all"></div>
     </div>
